app/styles/components/logo.scss
surreal-logo {

	right:0;
	width:432px;
	height:100%;
	display:block;
	position:absolute;
	margin:0 -16px 0 0;
	pointer-events:none;

	@include media(max-width-1400) {
		width:400px;
	}

	@include media(max-width-1200) {
		width:300px;
	}

	@include media(max-width-1000) {
		display:none;
	}

	img {
		width:100%;
		height:auto;
	}

}

